# parallel_computing

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  jobfile_cuda_JUST_FOR_INFORMATION  jobfile_cuda_profile_JUST_FOR_INFORMATION  jobfile_serial
src/: CMakeLists.txt  CudaHelper.h  main_cuda.cu  main_mpi_pavan.cpp  main_openmp.cpp  main_serial.cpp  main_threads.cpp  utilities.h
tests/: CMakeLists.txt  test_Mapper2D.cpp
